--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 theme: event
 
-defaultContentLanguage: de
+defaultContentLanguage: en
 languages:
     _merge: deep
     en:
@@ -10,11 +10,11 @@ languages:
                 - identifier: about
                   pageRef: /about
                   weight: 10
-                - identifier: sessions
-                  pageRef: /sessions
+                - identifier: committees
+                  pageRef: /committees
                   weight: 20
-                - identifier: speakers
-                  pageRef: /speakers
+                - identifier: guest-speakers
+                  pageRef: /guest-speakers
                   weight: 30
                 - identifier: location
                   pageRef: /location
@@ -26,9 +26,6 @@ languages:
                   pageRef: /code-of-conduct
                   weight: 60
             footer:
-                - identifier: imprint
-                  pageRef: /imprint
-                  weight: 10
                 - identifier: privacy
                   pageRef: /privacy-policy
                   weight: 20
@@ -38,11 +35,10 @@ languages:
                   weight: 10
                   params:
                       description: |
-                          Learn more about our mission, values, and the people behind our organization.
-                          The "About Us" page provides insights into who we are, what we do,
-                          and why we’re passionate about our work.
-                - identifier: speakers
-                  pageRef: /speakers
+                        The "About Us" page provides insights into who we are, what we do,
+                        and why we're passionate about our conference.
+                - identifier: guest-speakers
+                  pageRef: /guest-speakers
                   weight: 30
                   params:
                       description: |
@@ -65,199 +61,59 @@ languages:
         params:
             # Open Graph / X (Twitter) Cards
             description: |
-                A demo website to showcase the features of the "Event" theme for the
-                static website generator HUGO.
+                Keene High School's Model United Nations Conference - BirdMUN 2026!
+            keywords: ["MUN", "Model United Nations", "Keene High School", "BirdMUN", "Conference", "2026"]
             themes:
                 event:
-                    slogan: Not a real conference - this is just a demo!
-                    location: Pforzheim, Germany
+                    slogan: Keene High School's Model United Nations Conference
+                    location: Keene, NH 03431, United States
                     description: |
-                        This is a demo website to showcase the features of the __Event__ theme
-                        for the static website generator [Hugo](https://gohugo.io). You can
-                        find the source code of this website on
-                        [GitHub](https://github.com/medialesson/hugo-theme-event-demo). The theme
-                        can fetch data of any event from [Sessionize](https://sessionize.com) and
-                        automatically generates a schedule, a speaker list, and more. It also 
-                        integrates well with [Eventbrite](https://www.eventbrite.com) to sell tickets.
+                        Join us for BirdMUN 2026 at Keene High School! Experience engaging debates,
+                        insightful discussions, and collaborative problem-solving with students from
+                        around the world. Don't miss this opportunity to enhance your diplomatic skills
+                        and make lasting connections.
                     directions: |
-                        #### By Public Transportation
-                        Take the number 25 bus from downtown. [Click here for the bus
-                        schedule](https://www.kvv.de/en/plan-trip/timetables.html).
-
-                        #### By Car:
-                        From Downtown: Take Main Street north for 2 miles and turn right on
-                        Elm Street. [Get
-                        directions](https://www.kvv.de/en/plan-trip/timetables.html).
+                       TODO: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
                     aboutUs: |
-                        ### Mission
-                        We help companies and organizations to digital transform their business, products and processes through consulting,
-                        strategy, design, software development and training using cutting edge technology.
-
-                        ### Established
-                        - **2002** - Founded
-
-                        ### Our Team
-                        - **25+** Employees
-                        - **5** Nationalities
-
-                        ### Additional Info
-                        - We bring together diverse expertise and innovation.
-
-    de:
-        disabled: false
-        menus:
-            main:
-                - identifier: about
-                  pageRef: /about
-                  weight: 10
-                - identifier: sessions
-                  pageRef: /sessions
-                  weight: 20
-                - identifier: speakers
-                  pageRef: /speakers
-                  weight: 30
-                - identifier: location
-                  pageRef: /location
-                  weight: 40
-                - identifier: sponsors
-                  pageRef: /sponsors
-                  weight: 50
-                - identifier: code_of_conduct
-                  pageRef: /code-of-conduct
-                  weight: 60
-            footer:
-                - identifier: imprint
-                  pageRef: /imprint
-                  weight: 10
-                - identifier: privacy
-                  pageRef: /privacy-policy
-                  weight: 20
-            secondary:
-                - identifier: about
-                  pageRef: /about
-                  weight: 10
-                  params:
-                      description: |
-                          Erfahren Sie mehr über unsere Mission, Werte und die Menschen hinter unserer Organisation.
-                          Die Seite „Über uns“ bietet Einblicke, wer wir sind, was wir tun
-                          und warum wir leidenschaftlich an unserer Arbeit interessiert sind.
-                - identifier: speakers
-                  pageRef: /speakers
-                  weight: 30
-                  params:
-                      description: |
-                          Lernen Sie unsere herausragenden Referenten kennen, die ihr Fachwissen mit uns teilen werden.
-                          Erfahren Sie mehr über ihre Hintergründe und was sie besprechen werden.
-                - identifier: location
-                  pageRef: /location
-                  weight: 40
-                  params:
-                      description: |
-                          Finden Sie heraus, wo die Veranstaltung stattfindet.
-                          Dieser Abschnitt bietet Informationen zum Veranstaltungsort,
-                          zu Anfahrtsbeschreibungen und zu nahegelegenen Unterkünften.
-                - identifier: code_of_conduct
-                  pageRef: /code-of-conduct
-                  weight: 60
-                  params:
-                      description: |
-                          Lesen Sie die Verhaltensregeln für unsere Veranstaltung.
-                          Dieser Abschnitt beschreibt die Erwartungen an das Verhalten der Teilnehmer
-                          und die Veranstaltungsrichtlinien.
-        params:
-            # Open Graph / X (Twitter) Cards
-            description: |
-                Eine Demo-Website die das Thema "Event" für den statischen
-                Website-Generator HUGO vorstellt.
-            themes:
-                event:
-                    slogan: Keine echte Konferenz - nur eine Demo!
-                    location: Pforzheim
-                    description: |
-                        Dies ist eine Demo-Website, um die Funktionen des Thema __Event__
-                        für den statischen Website-Generator [Hugo](https://gohugo.io)
-                        vorzustellen. Der Quellcode dieser Website steht auf
-                        [GitHub](https://github.com/medialesson/hugo-theme-event-demo)
-                        bereit. Das Thema kann Daten einer beliebigen Veranstaltung von
-                        [Sessionize](https://sessionize.com) abrufen und generiert
-                        automatisch einen Zeitplan, eine Rednerliste und mehr. Es lässt sich
-                        zudem gut mit [Eventbrite](https://www.eventbrite.com) integrieren,
-                        um Tickets zu verkaufen.
-                    directions: |
-                        #### Mit den Öffentlichen:
-                        Nehmen Sie den Bus Nummer 25 vom Stadtzentrum. [Hier klicken für den
-                        Busfahrplan](https://www.kvv.de/en/plan-trip/timetables.html).
-
-                        #### Mit dem Auto:
-                        Fahren Sie vom Stadtzentrum aus 2 Meilen nach Norden auf der Main
-                        Street und biegen Sie dann rechts in die Elm Street ab.
-                        [Wegbeschreibung
-                        abrufen](https://www.kvv.de/en/plan-trip/timetables.html).
-
-                    aboutUs: |
-                        ### Mission
-                        Wir helfen Unternehmen und Organisationen, ihr Geschäft, ihre Produkte und Prozesse durch Beratung, Strategie, Design, Softwareentwicklung und Schulungen mit modernster Technologie digital zu transformieren.
-
-                        ### Gründung
-                        - **2002** - Gegründet
-
-                        ### Unser Team
-                        - **25+** Mitarbeiter
-                        - **5** Nationalitäten
-
-                        ### Zusätzliche Informationen
-                        - Wir vereinen vielfältige Expertise und Innovation.
-
+                        TODO: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
 params:
-    # Open Graph / X (Twitter) Cards
     images:
-        - logos/medicon-512.jpg
+        - logos/logo.webp
     themes:
         event:
-            sessionizeId: 67poir7q
-            title: medicon
+            title: BirdMUN 2026
             shortTitle:
-            startDate: 2026-01-30
-            endDate: 2026-01-31
+            startDate: 2026-03-14
+            endDate: 2026-03-14
             address:
-                - Medialesson GmbH
-                - Habermehlstraße 15
-                - 75172 Pforzheim
-                - Germany
-            map:
-                embeddableMapUrl: //umap.openstreetmap.fr/en/map/medialesson-gmbh_1105977?scrollWheelZoom=false
-                viewLargerMapUrl: //umap.openstreetmap.fr/en/map/medialesson-gmbh_1105977
-                # Link to edit the map: https://umap.openstreetmap.fr/en/map/anonymous-edit/1105977:HjtVVnbwCn6Yi3O02DTPnspzuyoHvP_Kn-M9rE53eE8
+                - 43 Arch St. 
+                - Keene, NH 03431
+                - United States
             callToAction:
-                eventbrite:
-                    eventId: 976108886957
+                other:
+                  url: https://example.com
             socialLinks:
-                xUrl: https://x.com/medialesson
-                facebookUrl: https://www.facebook.com/medialesson/
-                linkedinUrl: https://de.linkedin.com/company/medialesson-gmbh
+                xUrl: https://x.com/loremipsum/
+                facebookUrl: https://www.facebook.com/loremipsum/
+                linkedinUrl: https://linkedin.com/company/loremipsum/
             images:
-                logo: logos/medicon-512.webp
-                titleBackground: images/pexels-caleboquendo-3023317.webp
-                location: images/habermehlstr.webp
-            sponsors:
-                - logo: logos/medialesson-logo.svg
-                  url: https://www.media-lesson.com/
-                  name: 'Medialesson GmbH'
-            partners:
-                - logo: logos/medialesson-logo.svg
-                  url: https://www.media-lesson.com/
-                  name: 'Medialesson GmbH'
-            organizers:
-                - '00000000-0000-0000-0000-000000000000'
-                - '00000000-0000-0000-0000-000000000001'
-                - '00000000-0000-0000-0000-000000000004'
-                - '00000000-0000-0000-0000-000000000002'
-            featuredSessions:
-                - '729572'
-                - '729576'
-                - '729579'
+                logo: logos/logo.webp
+                titleBackground: images/placeholder-1200x400.svg
+                location: images/khs-sentinelsource.webp
             colors:
-                primaryLighter: '#5CB1E8'
-                primary: '#0d81be'
-                primaryDarker: '#143e8b'
+                primaryLighter: '#ff914d'
+                primary: '#f46600'
+                primaryDarker: '#d94d00'
                 track: '#15B8CA'
+            # sponsors:
+            #     - logo: logos/medialesson-logo.svg
+            #       url: https://www.media-lesson.com/
+            #       name: 'Medialesson GmbH'
+            # partners:
+            #     - logo: logos/medialesson-logo.svg
+            #       url: https://www.media-lesson.com/
+            #       name: 'Medialesson GmbH'
