--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/event"] 
 	path = themes/event
-	url = https://github.com/medialesson/hugo-theme-event.git
+	url = git@github.com:benjaminhays/hugo-theme-event.git
 	branch = main
